// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> component renders simple form 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-6 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #CCCCCC;
  border-bottom: 1px solid #CCCCCC;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-6:focus {
  border-bottom: 2px solid #0078D6;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        data-testid="label-field"
        for="label-1"
      >
        label 1
         
      </label>
      <input
        class="emotion-6 emotion-7"
        id="label-1"
        name="label-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        data-testid="label-field"
        for="label-2"
      >
        label 2
         
      </label>
      <input
        class="emotion-6 emotion-7"
        id="label-2"
        name="label-2"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a disabled form group 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-6 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-8 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-10 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #CCCCCC;
  border-bottom: 1px solid #CCCCCC;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-10:focus {
  border-bottom: 2px solid #0078D6;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
        disabled=""
      >
        <div
          class="emotion-6 emotion-7"
        >
          <label
            class="emotion-8 emotion-9"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-10 emotion-11"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with display flex 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-6 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-8 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-10 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #CCCCCC;
  border-bottom: 1px solid #CCCCCC;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-10:focus {
  border-bottom: 2px solid #0078D6;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <label
            class="emotion-8 emotion-9"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-10 emotion-11"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          <label
            class="emotion-8 emotion-9"
            data-testid="label-field"
            for="label-2"
          >
            label 2
             
          </label>
          <input
            class="emotion-10 emotion-11"
            id="label-2"
            name="label-2"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with group title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.23;
  margin: 0;
  color: #0078D6;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-10 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-12 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-14 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #CCCCCC;
  border-bottom: 1px solid #CCCCCC;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-14:focus {
  border-bottom: 2px solid #0078D6;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <p
          class="emotion-6 emotion-7"
          color="blue_100"
          data-testid="typography"
          style="text-transform: uppercase;"
        >
          Group title
        </p>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <label
            class="emotion-12 emotion-13"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-14 emotion-15"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="emotion-10 emotion-11"
        >
          <label
            class="emotion-12 emotion-13"
            data-testid="label-field"
            for="label-2"
          >
            label 2
             
          </label>
          <input
            class="emotion-14 emotion-15"
            id="label-2"
            name="label-2"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render the info svg and a tooltip 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.23;
  margin: 0;
  color: #0078D6;
}

.emotion-8 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-8:hover div[role='tooltip'] {
  display: block;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.34;
  margin: 0;
  display: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 160px;
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #000A25;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
  color: #FFFFFF;
  border-radius: 3px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 2;
  top: 0%;
  left: calc(100% + 10px);
}

.emotion-10:after {
  content: "";
  position: absolute;
  border-width: 5px;
  border-style: solid;
  border-color: transparent;
}

.emotion-10:after {
  top: 8px;
  right: 100%;
  border-right-color: #000A25;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-14 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-16 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-18 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.34;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #CCCCCC;
  border-bottom: 1px solid #CCCCCC;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-18:focus {
  border-bottom: 2px solid #0078D6;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <p
          class="emotion-6 emotion-7"
          color="blue_100"
          data-testid="typography"
          style="text-transform: uppercase;"
        >
          Title
        </p>
        <div
          class="emotion-8 emotion-9"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_3025_28251)"
            >
              <path
                d="M12 2C10.0222 2 8.08879 2.58649 6.4443 3.6853C4.79981 4.78412 3.51809 6.3459 2.76121 8.17317C2.00433 10.0004 1.8063 12.0111 2.19215 13.9509C2.578 15.8907 3.53041 17.6725 4.92894 19.0711C6.32746 20.4696 8.10929 21.422 10.0491 21.8079C11.9889 22.1937 13.9996 21.9957 15.8268 21.2388C17.6541 20.4819 19.2159 19.2002 20.3147 17.5557C21.4135 15.9112 22 13.9778 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7363 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM11.765 4.22C12.1111 4.22 12.4495 4.32264 12.7373 4.51493C13.025 4.70722 13.2493 4.98053 13.3818 5.3003C13.5142 5.62007 13.5489 5.97194 13.4814 6.31141C13.4139 6.65087 13.2472 6.9627 13.0024 7.20744C12.7577 7.45218 12.4459 7.61885 12.1064 7.68637C11.7669 7.7539 11.4151 7.71924 11.0953 7.58679C10.7755 7.45434 10.5022 7.23003 10.3099 6.94225C10.1176 6.65446 10.015 6.31612 10.015 5.97C10.015 5.50587 10.1994 5.06075 10.5276 4.73256C10.8558 4.40437 11.3009 4.22 11.765 4.22ZM15.515 18.22H8.515V16.72H10.515V10.72H8.515V9.22H13.515V16.72H15.515V18.22Z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="clip0_3025_28251"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
          <div
            class="emotion-10 emotion-11"
            direction="right"
            role="tooltip"
            style="max-width: 250px;"
          >
            Testing tooltip
          </div>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div
          class="emotion-14 emotion-15"
        >
          <label
            class="emotion-16 emotion-17"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-18 emotion-19"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
